add video content

--- a/showvideo/templates/index.html
+++ b/showvideo/templates/index.html
@@ -1,32 +1,24 @@
-<!DOCTYPE html>
-<a lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 {% extends "main_template.html" %}
-{#<body>#}
-{#{{ name }}#}
-{#{{ d }}#}
-{#{{ arr }}#}
-{#<br>#}
-{#{% for i in arr %}#}
-{#    {% if i == 2 %}#}
-{#        <i>{{ i|add:1 }}</i><br>#}
-{#    {% else %}#}
-{#        <i>{{ i|add:10 }}</i><br>#}
-{#        {% endif %}#}
-{#{% endfor %}#}
-{#<h1>hello world from templates</h1>#}
+{% load static %}
+{% block links %} <script src="{% static "script.js" %}"></script>{% endblock %}
 {% block title %}ALL VIDEO{% endblock %}
+
 {% block video %}
+<img src="{% static "kot.jpg" %}">
 {% for video in content %}
     <iframe width="1280" height="720" src="{{ video.urls }}"></iframe>
     <a href="/hello/one_video/{{ video.id }}"><h1><i>{{ video.title }}</i></h1></a>
     <h3><i>{{ video_date }}</i></h3>
-    <h3>Likes: {{ video.likes }}</h3>
+{#    <a href="/hello/add_like/{{ video.id }}/">Likes: {{ video.likes }}</a>#}
+    <h3 class="like" id = "{{ video.id }}">Likes:{{ video.likes }}</h3>
     <h5>{{ video.descruptions }}</h5>
     {% for com in video.comment.all %}
+        <button data-toggle="collapse" data-target="#demo{{ com.id }}">Collapsible</button>
+
+    <div id="demo{{ com.id }}" class="collapse">
+        {{ com.text }}
+
+    </div>
         <h5>{{ com.text }}</h5>
 
         <h6>{{ com.date }}</h6>
