--- a/showvideo/templates/test_html.html
+++ b/showvideo/templates/test_html.html
@@ -1,4 +1,4 @@
-<form action="/hello/comment/{{ some_id }}/" method="post">
+<form action={% url "add_comment" id=some_id %} method="post">
     {% csrf_token %}
     <div class="form-group">
     <label for="comment">Comment:</label>
