--- a/showvideo/templates/test_html.html
+++ b/showvideo/templates/test_html.html
@@ -2,9 +2,9 @@
     {% csrf_token %}
     <div class="form-group">
     <label for="comment">Comment:</label>
-    <textarea class="form-control" rows="5" name ="com"></textarea>
+    <textarea class="form-control" rows="5" name ="com" id="textarea{{ some_id }}"></textarea>
     <input class="from-control" type="password" name="pwd">
     </div>
 
-    <button type="submit" class="btn btn-success">Ok</button>
+    <button type="button" class="btn btn-success" id="{{ some_id }}">Ok</button>
 </form>
